--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -72,22 +72,25 @@ knitr::include_graphics("../img/grammar-of-graphics.png")
 .pull-left[
 ### Option 1: RStudio local
 
-- Download the materials at [INSERT LINK] and launch [nameofprof.Rproj]
+- Download the materials at https://rstd.io/uoc-ggplot2-repo and launch `uoc-ggplot2.Rproj`
 - Install `tidyverse` if you haven't done so before, or if you haven't updated it recently
 ```{r, message=FALSE, eval=FALSE}
 install.packages("tidyverse")
+install.packages("ggrepel")
 ```
-
 - Load the tidyverse
 ```{r, message=FALSE}
 library(tidyverse)
+library(ggrepel)
 ```
+- Open `ggplot2.Rmd`
 ]
 .pull-right[
 ### Option 2: RStudio Cloud
 
-- Go to RStudio Cloud at [INSERT LINK]
-- Open [FILENAME.RMD]
+- Go to RStudio Cloud at https://rstd.io/uoc-ggplot2-cloud
+- Start the assignment called ggplot2 Workshop
+- Open the R Markdown file in the project called ggplot
 ]
 
 ---
